--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="%PUBLIC_URL%/icon.png">
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon.png">
+  <meta name="description" content="Portfolio from Thiago S. Marcelino">
   <title>Portfolio</title>
 </head>
 <body>
