--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png">
-  <meta name="description" content="Portfolio from Thiago S. Marcelino">
+  <meta name="description" content="Portfolio by Thiago S. Marcelino">
   <title>Thiago S. Marcelino</title>
 </head>
 <body>
