--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon.png">
-  <meta name="description" content="Portfolio from Thiago S. Marcelino">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon.png"/>
+  <meta
+    name="description"
+    content="Portfolio from Thiago S. Marcelino"
+  />
   <title>Thiago S. Marcelino</title>
 </head>
 <body>
